<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".activity_cadastro_usuario">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastroUsuarioTittle"
            style="@style/textTitulo">
        </TextView>


        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNome"
            android:hint="@string/txtNome"
            android:inputType="text">

        </EditText>


        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSobrenome"
            android:hint="@string/txtSobreNome"
            android:inputType="text">

        </EditText>

        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmail"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress">

        </EditText>


        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtlogin"
            android:hint="@string/txtLogin"
            android:inputType="text">

        </EditText>


        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSenha"
            android:hint="@string/txtSenha"
            android:inputType="textPassword">

        </EditText>

        <Button
            style="@style/btnForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTextCadastroUsuario"
            android:text="@string/cadastroUsuario">


        </Button>


    </LinearLayout>

</ScrollView>