<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroLivro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".activity_cadastro_livro">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastroLivroTittle"
            style="@style/textTitulo">
        </TextView>


        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTituloLivro"
            android:hint="@string/txtTituloLivro"
            android:inputType="text">

        </EditText>


        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtlivroDescricao"
            android:hint="@string/txtDescricao"
            android:inputType="text">

        </EditText>

        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtFotoLivro"
            android:hint="@string/txtFotoLivro"
            android:inputType="text">

        </EditText>

        <Button
            style="@style/btnForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTextCadastroLivro"
            android:text="@string/cadastroUsuario">


        </Button>


    </LinearLayout>



</ScrollView>